# practice

./: CMakeLists.txt  main  main.c
algorithms/task/: 1_get_time.h  2_determine_type_quadrilateral.h  3_get_rectangle_intersection.h  4_get_variance.h  6_find_all_hidden_columns.h  7_rounding_numbers.h
data_structures/matrix/: matrix.c  matrix.h
